# SilvaViridis.Python.Common

./: README.md  pyproject.toml  run-tests.sh
docs/en/: ValueWithUnit.md  index.md
docs/en/Enums/: OrderedEnum.md  OrderedEnumComparator.md  OrderedEnumDictComparator.md  OrderedEnumGetDictComparator.md  OrderedEnumNameComparator.md  OrderedEnumPropertyComparator.md  OrderedEnumValueComparator.md
docs/en/Interfaces/: IComparable.md
src/SilvaViridis/Python/Common/: ValueWithUnit.py  __init__.py
src/SilvaViridis/Python/Common/Checksums/: CRC.py  CRC16Type.py  LRC.py  Lookup.py  __init__.py
src/SilvaViridis/Python/Common/Collections/: _Types.py  _Validators.py  __init__.py
src/SilvaViridis/Python/Common/Enums/: OrderedEnum.py  (+8 more)
tests/: test_enums__ordered_enum.py  test_enums__ordered_enum__dict.py  test_enums__ordered_enum__get_dict.py  test_enums__ordered_enum__name.py  test_enums__ordered_enum__value.py  test_value_with_unit.py  test_value_with_unit_eq.py  test_value_with_unit_ge.py  test_value_with_unit_gt.py  test_value_with_unit_le.py  test_value_with_unit_lt.py  test_value_with_unit_ne.py  test_web__http_status.py
tests/Checksums/: fixtures.py  test_crc_16.py  test_lrc.py
tests/Collections/: test_collections_validators.py
tests/Enums/: test_ordered_enum.py
tests/Text/: test_string_helper.py  test_text_validators.py  test_validators.py
tests/Unix/: test_permissions.py
tests/Validation/: test_has_attributes_validator.py  test_implements_magic_methods_validator.py  test_is_instance_validator.py  test_utils.py
tests/Web/: test_http_status.py
(+40 files in other folders)
