[project]
name = "SilvaViridis.Python.Common"
version = "0.3.0"
description = "Useful tools for python projects."
authors = [
    {name = "Maria Sorokina", email = "ruafelianna@ya.ru"},
]
dependencies = []
requires-python = ">=3.13"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm]
distribution = true

[tool.pdm.dev-dependencies]
test = ["pytest>=8.3.5", "coverage>=7.6.12"]
